--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
-    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.1.2",
     "@angular/material": "^11.1.2",
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@types/chart.js": "^2.9.30",
+    "angular-bootstrap-md": "^10.1.1",
+    "animate.css": "^4.1.1",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "mdb-angular-ui-kit": "^1.0.0-alpha2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
